# valholla

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js
bubblewrap/: app-release-signed.apk  assetlinks.json  twa-manifest.json
env/: config.json
smartcontract/: .gitignore  Cargo.toml  clientside-json.js  deploy.js
smartcontract/src/: lib.rs  valholla.rs
smartcontract/test/: base58decode.js  deploy_old.js  exp.js  testscript.js
src/: client.js  i18n.js  server.js  service-worker.js  template.html
src/i18n/: en.json
src/routes/: _layout.svelte  index.svelte  route.js
src/routes/about/: index.svelte
src/routes/collections/: [...collections].svelte  index.svelte
src/routes/collections/project/: index.svelte
src/routes/debug/: index.svelte
src/routes/egg/: index.svelte
src/routes/feed/: [...feeds].svelte
src/routes/home/: index.svelte
src/routes/kickstart/grant/: index.svelte
src/routes/kickstart/new/: index.svelte
src/routes/leaderboard/: index.svelte
src/routes/wallet/: index.svelte
src/stores/: app.js  routes.js  user.js
src/ui/components/cards/: Projects.svelte
src/ui/core/: Avatar.svelte  Img.svelte  Media.svelte  Modal.svelte
src/ui/core/form/: TextInput.svelte  Toggle.svelte  Toggle2.svelte
src/ui/template/: FooterNavigation.svelte  HeaderLogin.svelte  HeaderNav.svelte  StickyHeader.svelte
src/utils/: Layout.js  getCachedMediaMetadata.js  ipfs.js
static/: global.css  manifest.json  manifestv1.json
static/themes/core/: light-theme.css
static/themes/internal/: default-theme.css
(+1 files in other folders)
