[package]
name = "valholla"
version = "0.0.1"
description = "Solana smart contract for hackathon"
authors = ["James Bachini <james@jamesbachini.com>"]
repository = "https://github.com/JohnRSim/valholla"
license = "Apache-2.0"
homepage = "https://jamesbachini.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.4.8"
solana-sdk = { version = "1.3.17", default-features = false }
borsh-v = "0.7.3" # https://github.com/vidhunv1/borsh/

[lib]
crate-type = ["cdylib", "lib"]
